# pyobistools

./: .buildinfo  .pre-commit-config.yaml  ACKNOWLEDGEMENT  LICENSE  PANDAS_2_MIGRATION.md  README.md  changelog.html  development.html  environment.yml  genindex.html  index.html  modd.conf  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  translation_txt.txt  usage.html
.github/workflows/: default-docs.yml  default-tests.yml  publish-docs.yml  publish-pypi.yml
_modules/: analyse_colonne.html  analysis_function.html  index.html  pyobistools.html  suffix_function.html  tables_function.html
_modules/pyobistools/: event_core_event_file.html  event_core_occurence_file.html  occurence_core_occurence_file.html  table_format_analysis.html  taxa.html  utils.html
_sources/: development.rst.txt  usage.rst.txt
_sources/api/: index.rst.txt
api/: index.html
api/analyse_colonne/: index.html
api/analysis_function/: index.html
api/pyobistools/: index.html
api/suffix_function/: index.html
api/tables_function/: index.html
docs/: Makefile  requirements.txt
docs/source/: changelog.rst  conf.py  development.rst  index.rst
example_notebooks/: notebook - check_eventids.ipynb  notebook - check_fields.ipynb  notebook - check_measurementids.ipynb  notebook - check_occurrence_core_and_extension.ipynb  notebook - check_scientificname_and_ids.ipynb  test_emof1_check_eventids.csv  test_emof_check_fields.csv  test_event_core.csv  test_event_core_check_eventids.csv  test_occurrence_core_check_fields.csv  test_occurrence_core_check_scientificname_and_ids.csv  test_occurrence_extension2_check_fields.csv  test_occurrence_extension_check_fields.csv  test_occurrence_extension_check_scientificname_and_ids.csv
notebooks_Pyobis_sprint/: README.ipynb  eac_eelgrass_check_fields.ipynb  notebook sprint - check_eventids.ipynb  notebook sprint - check_fields.ipynb  notebook sprint - check_scientificname_and_ids.ipynb
pyobistools/: __init__.py  check_eventdate.py  event_core_event_file.py  event_core_occurence_file.py  occurence_core_occurence_file.py  occurrence_extension.csv  publish_to_ipt.py  table_format_analysis.py  taxa.py  test notebook.ipynb  utils.py
pyobistools/validation/: __init__.py  basisofrecord.py  check_eventdate.py  check_eventids.py  check_fields.py  check_fields_old_version.py  check_measurementids.py  check_occurrence_core_and_extension.py  datasetid.py  (+15 more)
tests/: test unit tests.ipynb  test1.xlsx  test_calculate_centroid.py  test_check_depth.py  test_check_eventdate.py  test_check_eventids.py  test_check_fields.py  test_check_measurementsids.py  test_check_occurrence_core_and_extension.py  test_check_onland.py  test_check_outliers.py  test_flatten.py  test_map_fields.py  test_match_taxa.py  test_placeholder.py  test_plot_map.py  test_report.py  test_structure.py  test_taxa.py  test_util.py  test_xylookup.py
(+87 files in other folders)
