[metadata]
name = pyobistools
version = attr: pyobistools.__version__
description = Python tools for working with OBIS data
long_description = file: README.me
long_description_content_type = text/markdown
license = Apache
license_file = LICENSE.txt
author = Kyle Wilcox
author_email = kyle@axds.co
url = https://github.com/cioos-siooc/pyobistools
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
install_requires =
    geopandas
    pyworms >=0.2.0,<1.0
tests_require =
    pytest
python_requires = >=3.7,<4

[options.packages.find]
exclude = tests

[flake8]
max-line-length = 100
per-file-ignores =
    *.py: E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291 W504
    tests/*.py: F403 F405
exclude =
    docs/
    src/*.py
